--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -3,28 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 </head>
 <body>
+    <nav class="navbar navbar-inverse">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">My scratchpad</a>
+            </div>
+        </div>
+    </nav>
 
-    <div>
-        This is the first dummy comment.
+    <div class="container">
+    {% for comment in comments %}
+    <div class="row">
+        {{ comment }}
     </div>
+    {% endfor %}
 
-    <div>
-        This is the the second dummy comment.  It's no more interesting
-        than the first.
-    </div>
-
-    <div>
-        This is the third dummy comment.  It's actually quite exciting!
-    </div>
-
-    <div>
+    <div class="row">
         <form action="." method="POST">
-            <textarea name="contents" placeholder="Enter a comment"></textarea>
-            <input type="submit" value="Post comment">
+            <textarea class="form-control" name="contents" placeholder="Enter a comment"></textarea>
+            <input type="submit" class="btn btn-success" value="Post comment">
         </form>
+    </div>
     </div>
 
 </body>
