added sqlite db for development database

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -23,7 +23,7 @@
     <div class="container">
     {% for comment in comments %}
     <div class="row">
-        {{ comment }}
+        {{ comment.content }}
     </div>
     {% endfor %}
 
